include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include)

file(GLOB SAMPLES_LIST *.cc)

foreach(SAMPLE_PATH ${SAMPLES_LIST})
    get_filename_component(SAMPLE ${SAMPLE_PATH} NAME_WE)
    get_filename_component(SAMPLE_FILE ${SAMPLE_PATH} NAME)
    add_executable(${SAMPLE} ${SAMPLE_PATH})
    if(JEMALLOC_FOUND)
        target_link_libraries(${SAMPLE} hare_base hare_log hare_net PkgConfig::Jemalloc)
    else()
        target_link_libraries(${SAMPLE} hare_base hare_log hare_net)
    endif()
    message( STATUS "Add sample[${SAMPLE}] by [${SAMPLE_FILE}]")
endforeach()